# Soft

./: .clangd  .gitignore  CMakeLists.txt  README.md  TODO.md
example/: CMakeLists.txt  demo.c  demo_image.c  demo_window.c
src/: CMakeLists.txt  main.c  soft.c  soft.h
